kubernetes/apps/security/authentik/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: security
  annotations:
    external-dns.kubernetes.io/target: "sso.${SECRET_DOMAIN}"
spec:
  hostnames:
    - "authentik.${SECRET_DOMAIN}"
    - "id.${SECRET_DOMAIN}"
    - "sso.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-analogpuddle
  namespace: security
  annotations:
    external-dns.kubernetes.io/target: "sso.analogpuddle.com"
spec:
  hostnames:
    - "authentik.analogpuddle.com"
    - "id.analogpuddle.com"
    - "sso.analogpuddle.com"
  parentRefs:
    - name: envoy-external-ap
      namespace: network
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
